favicon + site link

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Portfolio" />
+    <link rel="icon" type="image/x-icon" href="/images/favicon-32x32.png">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -20,7 +21,7 @@
   <body class="light" id="top">
     <header class="header center">
       <h3>
-        <a href="https://LINK_FOR_MY_GITHUB_PAGE_WEBSITE" class="link"
+        <a href="http://www.yoosuf.co.uk" class="link"
           >YP.</a
         >
       </h3>
