--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             </ul>
 
             <a
-              href="https://github.com"
+              href="https://github.com/ypatel789/icarus"
               aria-label="source code"
               class="link link--icon"
             >
