--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <div class="project">
             <h3>CS50X</h3>
             <p class="project__description">
-              Computer Science course taught by David J. Malan, CS50x teaches students how to think algorithmically and solve problems efficiently. Topics include abstraction, algorithms, data structures, encapsulation, resource management, security, software engineering, and web development. See my submissions, along with a brief overview for each Problem Set via the Github link below.
+              Computer Science course by Harvard University, CS50x teaches students how to think algorithmically and solve problems efficiently. Topics include abstraction, algorithms, data structures, encapsulation, resource management, security, software engineering, and web development. See my submissions, along with a brief overview for each Problem Set via the Github link below.
             </p>
             <ul class="project__stack">
               <li class="project__stack-item">C</li>
