--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
           <li class="skills__list-item btn btn--plain">Bootstrap</li>
           <li class="skills__list-item btn btn--plain">Flask</li>
           <li class="skills__list-item btn btn--plain">Anvil</li>
+          <li class="skills__list-item btn btn--plain">PyTorch</li>
           <li class="skills__list-item btn btn--plain">Git</li>
         </ul>
       </section>
