--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
         </p>
 
         <div class="about__contact center">
-          <!-- <a href="https://example.com">
+          <a href="/assets/Yoosuf_Patel_Resume_30-01-2023-00-47-40.pdf" download="Yoosuf_Patel_Resume_30-01-2023-00-47-40.pdf">
             <span class="btn btn--outline">Resume</span>
-          </a> -->
+          </a>
 
           <a
             href="https://github.com/ypatel789"
