--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 
     <footer class="footer">
       <a
-        href="https://github.com/rajshekhar26/cleanfolio-minimal"
+        href="https://github.com/ypatel789/ypatel789.github.io"
         class="link footer__link"
       >
         Created By Yoosuf Patel
