--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <h1>Hi<span class="wave">👋</span>,  I am <span class="about__name">Yoosuf Patel.</span></h1>
         <h2 class="about__role">A Graduate Engineer</h2>
         <p class="about__desc">
-          Aspiring Software engineer with three years experience as a structural engineer, leading multi-million pound commercial projects. Proficient in C, Python and web based frameworks to create efficient web apps. Experience in creating workflows using GitHub actions and automating tasks using Python scripts. Passionate about all things tech and looking to take my first steps in the industry.
+          Software engineer with three years experience as a structural engineer, leading multi-million pound commercial projects. Proficient in C, Python and web based frameworks to create efficient web apps. Experience in creating workflows using GitHub actions and automating tasks using Python scripts. Passionate about all things tech and looking to take my first steps in the industry.
  
         </p>
 
